<resources>
    <string name="app_name">Music</string>
    <string name="search">search</string>
    <string name="unknown"><![CDATA[<unknown>]]></string>
    <string name="_0_00">0:00</string>
    <string name="previous_song">previous song</string>
    <string name="album_image">album image</string>
    <string name="play_and_pause">play and pause</string>
    <string name="next_song">next song</string>
    <string name="unknown_artist">Nghệ sĩ không xác định</string>
    <string name="music">Music</string>
    <string name="unknown_song">Bài hát không xác định</string>
    <string name="remove">remove</string>
    <string name="add_favorite">add favorite</string>
    <string name="all_songs">All Songs</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>