<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/bt_fwd"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/button_fwd"
        android:contentDescription="@string/next_song" />

    <ImageButton
        android:id="@+id/ib_play_pause_notification"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/bt_fwd"
        android:background="@drawable/fab_pause_play"
        android:contentDescription="@string/play_and_pause" />

    <ImageButton
        android:id="@+id/bt_rew"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@id/ib_play_pause_notification"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/button_rew"
        android:contentDescription="@string/previous_song" />

    <ImageView
        android:id="@+id/iv_album_cover"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/bg_default_album_art"
        android:contentDescription="@string/album_image" />
</RelativeLayout>